# navajo

./: .gitignore  Cargo.toml  README.md
client/src/: http.rs  main.rs  route.rs  server.rs  session.rs
client/src/p2p/: channel.rs  client.rs
common/src/: beans.rs  key_pair.rs
configs/: client-test-1.toml  client-test-2.toml
ncrypto/: Cargo.toml
ncrypto/src/algo/: aes.rs  base58.rs  base64.rs  mod.rs
nredis/src/: lib.rs
p2p/: Cargo.toml
p2p/src/: lib.rs  message.rs
p2p/src/packet/: mod.rs  p2p_packet.rs  readers.rs  writers.rs
server/: Makefile
server/src/: main.rs  queue.rs  route.rs  server.rs  session.rs
server/src/db/: mod.rs  repository.rs
server/src/p2p/: channel.rs  connection.rs  mod.rs  server.rs
services/: Cargo.toml  todo_list
services/client/: Cargo.toml
services/client/src/: config.rs  main.rs  route.rs  session.rs  utils.rs  web_server.rs
services/client/src/keystore/: mod.rs  storage.rs
services/client/src/p2p/: channel.rs  client.rs  mod.rs
services/common/: Cargo.toml
services/common/src/: account.rs  errors.rs  key_pair.rs  lib.rs
services/ncrypto/: Cargo.toml
services/ncrypto/src/: lib.rs
services/ncrypto/src/algo/: aes.rs  diffie_hellman.rs  ecdsa.rs  mod.rs  sha256.rs
services/nredis/: Cargo.toml
services/nredis/src/: lib.rs
services/p2p/src/: lib.rs  message.rs
services/p2p/src/packet/: p2p_packet.rs  readers.rs
services/server/: Cargo.toml
services/server/src/: config.rs  errors.rs  main.rs  queue.rs  route.rs  server.rs  session.rs
services/server/src/db/: mod.rs  models.rs  redis.rs  repository.rs
services/server/src/p2p/: channel.rs  connection.rs  server.rs
