[package]
name = "ncrypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
base58 = "0.2.0"
x25519-dalek = "1.2.0"
ed25519-dalek = "1.0.1"
rand_core = "0.5.0"
sha2 = "0.9.1"
base64 = "0.13.1"