[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
ncrypto = { path = "../ncrypto" }
nredis = { path = "../nredis" }
p2p = { path = "../p2p" }
actix-web = "4"
actix-rt = "2.7.0"
serde_json = "1.0"
derive_more = "0.99.17"
toml = "0.5.10"
mac_address = "1.1.4"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]