[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncrypto = { path = "../ncrypto" }
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.secp256k1]
version = "0.26.0"
features = ["global-context", "rand-std", "bitcoin-hashes-std", "serde"]