[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
ncrypto = { path = "../ncrypto" }
p2p = { path = "../p2p" }
actix-web = "4"
actix-rt = "2.7.0"
serde_json = "1.0"
derive_more = "0.99.17"
mysql_async = "0.31.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.redis]
version = "0.22.1"
features = ["tokio-comp"]
